[project]
name = "simpletrackpy"
version = "0.1.0"
description = "Particle tracking tutorial using trackpy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "trackpy>=0.6.0",
    "pims>=0.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "pillow>=10.0.0",
    "tifffile>=2023.0.0",
]
